chapter-04/examples/errors/on-error-uncaught.js
'use strict';

process.emit('error', new Error('Oops !'));
